# atelier

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  PROJECT.md  README.md  SECURITY.md  biome.json  config.example.yaml  knip.json  opencode.json  package.json  sandbox.config.example.json  sandbox.config.full-example.json  tsconfig.json
.changeset/: README.md  config.json  drop-atelier-server-plugin.md  initial-publish-flow-test.md  oc-plugin-direct-sandbox-spawn.md  oc-plugin-resolve-workspace-dir.md  oc-plugin-strip-auth-content.md  oc-plugin-x-opencode-directory-header.md  opencode-plugin-integration.md  retrigger-release.md  sandbox-rename.md  warp-1-16-2-cleanup.md  warp-wait-public-ingress.md  workspace-routing-via-query.md
.github/: PULL_REQUEST_TEMPLATE.md
.sisyphus/: boulder.json
apps/agent-rust/: AGENTS.md  Cargo.toml  Dockerfile
apps/agent-rust/src/: body.rs  command.rs  config.rs  forwarder.rs  limits.rs  main.rs  response.rs  router.rs  ssh.rs  terminal.rs  watchdog.rs
apps/agent-rust/src/routes/: apps.rs  config.rs  dev.rs  exec.rs  files.rs  git.rs  health.rs  mod.rs  process_manager.rs  services.rs
docs/: MANUAL_SETUP_COMMANDS.md  advanced-configuration.md  architecture.md  constraints.md  dashboard-refactoring-plan.md  design-spec.md  getting-started.md  github-gateway.md  github-workflows.md  infrastructure.md  kanban-plan.md  kata-migration-interrogation.md  kata-migration-plan.md  patterns.md  product-ideas.md  recommended-infrastructure.md  sandbox-boot-optimization.md  setup.md
(+724 files in other folders)
