[package]
name = "sandbox-agent"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "time", "sync", "net"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-vsock = "0.7"
urlencoding = "2"
libc = "0.2"
tokio-tungstenite = "0.26"
nix = { version = "0.29", features = ["process", "signal", "term", "fs", "user"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
